

                CHANGES IN party VERSION 1.2-4 (2017-04-xx)

    o    Bonferroni sometimes overcorrected (by taking constant variables into account). 
         Spotted by Heidi Seibold.


                CHANGES IN party VERSION 1.2-3 (2017-04-10)

    o    predict(<cforest>, OOB = TRUE) in party < 1.2-0 was _correct_
         and version 1.2-0 to 1.2-2 contained in incorrect "correction".
         The test set error and the out-of-bag error are now (again) 
         roughly equal. There won't be any correlation between 
         observations and out-of-bag predictions when the response is
         independent to all explanatory variables. Out-of-bag predictions 
         in package partykit (>= 2.0-0) are now based on the same
         out-of-bag weights and the results from both packages are 
         roughly equivalent. The issue was first spotted by
         Julian Karch and later by Andrew Sage.

    o    comment on false alarms by maacheck / bcheck (email by
         Tomas Kalibera April 10, 2017) in party/src/*c


                CHANGES IN party VERSION 1.2-2 (2017-02-27)

    o    free memory in src/Distributions.c (pointed out by
         Martin Binder)

    o    register C routines


                CHANGES IN party VERSION 1.2-1 (2017-02-08)

    o    fix a memory leak occuring while searching for surrogate
         splits in the process of predicting the terminal node ID

    o    surrogate splits might have used statistics with slightly
         incorrect weights

    o    party::ctree gives _same_ results as partykit::ctree 
         (version >= 2.0-1 from R-forge)


                CHANGES IN party VERSION 1.2-0 (2017-02-06)

    o    predict(<cforest>, OOB = TRUE) relied on incorrect weights
         and gave suboptimal predictions. varimp() was not affected.
         The effect was pointed out by Julian Karch when comparing
         party::cforest to partykit::cforest


                CHANGES IN party VERSION 1.1-2 (2016-11-28)
