@@ -1,6 +1,6 @@
 Package: party
 Title: A Laboratory for Recursive Partytioning
-Date: 2017-04-24
+Date: 2017-12-01
 Version: 1.2-4
 Authors@R: c(person("Torsten", "Hothorn", role = c("aut", "cre"),
                     email = "Torsten.Hothorn@R-project.org",
